# kf-chatbot-poc

backend/: Makefile  Procfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 595e2c9b038e_initial_migrations.py  c1eeb2af1b7c_add_role_to_chat.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  rag.py  socket.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: chat-interface.tsx  error-boundary.tsx  thread-list.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts
